# Code

./: MUNIMA.html  mobile.js
.github/: copilot-instructions.md
All_My_Work/SIAM GP/: index.html  script.js  style.css
BookShop/: index.html  indexWback.html
CPP/: 41240302538_Rafi_Lab7_cse1360.txt  ATM.cpp  BankSystem.cpp  Divisor.cpp  GUI.cpp  book_class.cpp  box_class.cpp  car_class.cpp  find_name.cpp  hierarchical_inheritance.cpp  howManyString.cpp  hybrid.cpp  lab7_1.cpp  labTEst_Assign.cpp  maxvalue.cpp  multiple_inheritance.cpp  palindrome.cpp  prime_inClass.cpp  split_ratio.cpp  student_class.cpp
CPP ANimation/: ani.cpp
CPP/Algorithm/: ChatBot.cpp  IROS_T1.cpp  IROS_T2.CPP  IROS_T3.CPP  IROS_T4.CPP  IROS_T5.CPP  IROS_T6.CPP  IROS_T7.CPP  IROS_T8.CPP  IROS_T9.CPP  Super_shop.cpp  chatBotGPT.cpp  new.cpp  oneAlige.cpp  supershop2.cpp  users.csv
CPP/ggg.txt/: rrr.txt  (+2 more)
DESIGN/: X.html
Data Struct/: Binary_Search.cpp  circularQueue.cpp  dequeue.cpp  index.html  queue.cpp
GUI/: CMakeLists.txt  main.cpp
GUI/GUI/: logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h  productsearchdialog.cpp  productsearchdialog.h  registrationdialog.cpp  registrationdialog.h  resources.qrc
GUI/resources/stylesheets/: main.qss
IROS/: IROS_FINAL.cpp
LogIn File/: Dashbord.php
Project Money/: money1.html  money2.html  money3.html  money4.html
Python/: Hello.py  hsr.py  matrix.py  name_find.py  numpy_demo.py  ppp.py  size measurement.py  srtgn.py  sum.py  turtle_demo.py  x.py  y.py  yyy.py
Youtube_Data/: info.html
presentation/: designPPTX.html  x.html
(+55 files in other folders)
